--- a/package.json
+++ b/package.json
@@ -10,13 +10,18 @@
     "test": "jest"
   },
   "dependencies": {
+    "@react-native-community/cli-platform-android": "^12.1.1",
+    "@react-navigation/bottom-tabs": "^6.5.11",
     "@react-navigation/native": "^6.1.9",
     "@react-navigation/native-stack": "^6.9.17",
     "modal": "^1.2.0",
     "react": "18.2.0",
     "react-native": "^0.72.7",
+    "react-native-curved-bottom-bar": "^3.2.6",
+    "react-native-gesture-handler": "^2.14.0",
     "react-native-linear-gradient": "^2.8.3",
     "react-native-otp-textinput": "^1.1.3",
+    "react-native-reanimated": "^3.5.4",
     "react-native-safe-area-context": "^4.7.4",
     "react-native-screens": "^3.27.0",
     "react-native-svg": "^14.0.0",
