--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "react-native-curved-bottom-bar": "^3.2.6",
     "react-native-gesture-handler": "^2.14.0",
     "react-native-linear-gradient": "^2.8.3",
+    "react-native-modal": "^13.0.1",
     "react-native-otp-textinput": "^1.1.3",
     "react-native-reanimated": "^3.5.4",
     "react-native-safe-area-context": "^4.7.4",
