--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@react-navigation/bottom-tabs": "^6.5.11",
     "@react-navigation/native": "^6.1.9",
     "@react-navigation/native-stack": "^6.9.17",
+    "d3-shape": "^3.2.0",
     "modal": "^1.2.0",
     "react": "18.2.0",
     "react-native": "^0.72.7",
@@ -21,15 +22,18 @@
     "react-native-gesture-handler": "^2.14.0",
     "react-native-linear-gradient": "^2.8.3",
     "react-native-modal": "^13.0.1",
+    "react-native-otp-entry": "^1.3.0",
     "react-native-otp-textinput": "^1.1.3",
     "react-native-reanimated": "^3.5.4",
     "react-native-safe-area-context": "^4.7.4",
     "react-native-screens": "^3.27.0",
     "react-native-svg": "^14.0.0",
+    "react-native-svg-path-gradient": "^0.4.0",
     "react-native-svg-transformer": "^1.1.0",
     "react-native-swiper": "^1.6.0",
     "react-native-swiper-flatlist": "^3.2.3",
-    "react-native-template-typescript": "^6.12.11"
+    "react-native-template-typescript": "^6.12.11",
+    "rn-wave-bottom-bar": "^2.2.36"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
@@ -38,6 +42,7 @@
     "@react-native/eslint-config": "^0.72.2",
     "@react-native/metro-config": "^0.72.11",
     "@tsconfig/react-native": "^3.0.0",
+    "@types/d3-shape": "^3.1.6",
     "@types/react": "^18.2.38",
     "@types/react-native": "^0.72.7",
     "@types/react-test-renderer": "^18.0.0",
