--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@react-native-community/cli-platform-android": "^12.1.1",
+    "@react-native-community/geolocation": "^3.1.0",
     "@react-navigation/bottom-tabs": "^6.5.11",
     "@react-navigation/native": "^6.1.9",
     "@react-navigation/native-stack": "^6.9.17",
@@ -20,7 +21,9 @@
     "react-native": "^0.72.7",
     "react-native-curved-bottom-bar": "^3.2.6",
     "react-native-gesture-handler": "^2.14.0",
+    "react-native-image-picker": "^7.1.0",
     "react-native-linear-gradient": "^2.8.3",
+    "react-native-maps": "^1.8.3",
     "react-native-modal": "^13.0.1",
     "react-native-otp-entry": "^1.3.0",
     "react-native-otp-textinput": "^1.1.3",
