--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,7 +1,31 @@
+// {
+//   "compilerOptions": {
+//     "jsx": "react"
+//   },
+//   "include": ["declarations.d.ts"],
+//   "extends": "@tsconfig/react-native/tsconfig.json"
+// }
+// {
+//   "extends": "@tsconfig/react-native/tsconfig.json"
+// }
 {
   "compilerOptions": {
-    "jsx": "react"
+    "allowJs": true,
+    "allowSyntheticDefaultImports": true,
+    "esModuleInterop": true,
+    "isolatedModules": true,
+    "jsx": "react",
+    "lib": ["es6"],
+    "moduleResolution": "node",
+    "noEmit": true,
+    "strict": true,
+    "target": "esnext"
   },
-
-  "extends": "@tsconfig/react-native/tsconfig.json"
+  "include": ["declarations.d.ts"],
+  "exclude": [
+    "node_modules",
+    "babel.config.js",
+    "metro.config.js",
+    "jest.config.js"
+  ]
 }
