--- a/package.json
+++ b/package.json
@@ -27,10 +27,11 @@
     "react-native-modal": "^13.0.1",
     "react-native-otp-entry": "^1.3.0",
     "react-native-otp-textinput": "^1.1.3",
-    "react-native-reanimated": "^3.5.4",
+    "react-native-reanimated": "^3.6.1",
     "react-native-safe-area-context": "^4.7.4",
     "react-native-screens": "^3.27.0",
-    "react-native-svg": "^14.0.0",
+    "react-native-size-scaling": "^0.5.1",
+    "react-native-svg": "^14.1.0",
     "react-native-svg-path-gradient": "^0.4.0",
     "react-native-svg-transformer": "^1.1.0",
     "react-native-swiper": "^1.6.0",
